i modified some files

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
         <title>Home Page</title>
     </head>
     <body bgcolor='yellow' text='blue'>
-        <h1>Welcome to Vaibhavsoft Solutions</h1>
+        <h1>Welcome to VKsoft Solutions</h1>
         <a href="./register">click here to register</a><br>
         <a href="./login">click here to login</a>   
     </body>
